Pull out Formats.Msts changes from https://github.com/leezer3/OpenBVE/pull/684

--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -248,6 +248,9 @@
     <Compile Include="World\Transformations.cs" />
     <Compile Include="Math\Vectors\Vector2.cs" />
     <Compile Include="Math\Vectors\Vector3.cs" />
+    <Compile Include="World\UnitConversions\Length.cs" />
+    <Compile Include="World\UnitConversions\UnitConvertor.cs" />
+    <Compile Include="World\UnitConversions\Weight.cs" />
     <Compile Include="World\Vertex.cs" />
   </ItemGroup>
   <ItemGroup>
