--- a/source/Plugins/Formats.Msts/Formats.Msts.csproj
+++ b/source/Plugins/Formats.Msts/Formats.Msts.csproj
@@ -58,4 +58,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokens.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\OpenBveApi\OpenBveApi.csproj">
+      <Project>{27134980-4415-4375-a564-40a9014dfa5f}</Project>
+      <Name>OpenBveApi</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
