--- a/source/OpenBVE/app.config
+++ b/source/OpenBVE/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
@@ -6,12 +6,6 @@
 	<runtime>
 		<loadFromRemoteSources enabled="true" />
 		<gcAllowVeryLargeObjects enabled="true" />
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<probing privatePath="Data\Formats" />
-			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
-			</dependentAssembly>
-		</assemblyBinding>
+		<legacyCorruptedStateExceptionsPolicy enabled="true|false"/>
 	</runtime>
 </configuration>
