--- a/source/InputDevicePlugins/SanYingInput/SanYingInput.csproj
+++ b/source/InputDevicePlugins/SanYingInput/SanYingInput.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=3.3.2.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\OpenTK.3.3.2\lib\net20\OpenTK.dll</HintPath>
+      <HintPath>..\..\..\packages\OpenTK-OpenBVE.1.0.0\lib\net20\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
