Change: Initial implementation of BVE5 sound table

--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Motor\BVE4\MotorSound.cs" />
     <Compile Include="Motor\BVE4\MotorSoundTable.cs" />
     <Compile Include="Motor\BVE4\MotorSoundTable.Entry.cs" />
+    <Compile Include="Motor\BVE5\MotorSound.cs" />
+    <Compile Include="Motor\BVE5\MotorSoundTableEntry.cs" />
+    <Compile Include="Motor\BVE5\SoundState.cs" />
     <Compile Include="Power\AccelerationCurve.cs" />
     <Compile Include="Power\Breaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
