--- a/source/OpenBVE/app.config
+++ b/source/OpenBVE/app.config
@@ -7,5 +7,11 @@
 		<loadFromRemoteSources enabled="true" />
 		<gcAllowVeryLargeObjects enabled="true" />
 		<legacyCorruptedStateExceptionsPolicy enabled="true|false" />
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
 	</runtime>
 </configuration>
