--- a/source/SoundManager/OpenTK.dll.config
+++ b/source/SoundManager/OpenTK.dll.config
@@ -1,4 +1,5 @@
 <configuration>
+  <!-- Generic GNU Linux -->
   <dllmap os="linux" dll="opengl32.dll" target="libGL.so.1"/>
   <dllmap os="linux" dll="glu32.dll" target="libGLU.so.1"/>
   <dllmap os="linux" dll="openal32.dll" target="libopenal.so.1"/>
@@ -7,6 +8,16 @@
   <dllmap os="linux" dll="libX11" target="libX11.so.6"/>
   <dllmap os="linux" dll="libXi" target="libXi.so.6"/>
   <dllmap os="linux" dll="SDL2.dll" target="libSDL2-2.0.so.0"/>
+  <!-- FreeBSD -->
+  <dllmap os="freebsd" dll="opengl32.dll" target="libGL.so.1"/>
+  <dllmap os="freebsd" dll="glu32.dll" target="libGLU.so.1"/>
+  <dllmap os="freebsd" dll="openal32.dll" target="libopenal.so.1"/>
+  <dllmap os="freebsd" dll="alut.dll" target="libalut.so.0"/>
+  <dllmap os="freebsd" dll="opencl.dll" target="libOpenCL.so"/>
+  <dllmap os="freebsd" dll="libX11" target="libX11.so.6"/>
+  <dllmap os="freebsd" dll="libXi" target="libXi.so.6"/>
+  <dllmap os="freebsd" dll="SDL2.dll" target="libSDL2-2.0.so.0"/>
+  <!-- Apple OS-X -->
   <dllmap os="osx" dll="opengl32.dll" target="/System/Library/Frameworks/OpenGL.framework/OpenGL"/>
   <dllmap os="osx" dll="openal32.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
   <dllmap os="osx" dll="alut.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
