CI: Roll back Windows azure version
https://github.com/actions/virtual-environments/issues/4856

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -16,7 +16,7 @@ jobs:
 - job: WindowsBuild
   displayName: 'Build on Windows (sln)'
   pool:
-    vmImage: 'windows-latest'
+    vmImage: 'windows-2019'
 
   variables:
     solution: 'OpenBVE.sln'
