--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -16,7 +16,7 @@ jobs:
 - job: WindowsBuild
   displayName: 'Build on Windows (sln)'
   pool:
-    vmImage: 'windows-latest'
+    vmImage: 'windows-2019'
 
   variables:
     solution: 'OpenBVE.sln'
