--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ jobs:
 - job: WindowsBuild
   displayName: 'Build on Windows (sln)'
   pool:
-    vmImage: 'windows-latest'
+    vmImage: 'windows-2019'
 
   variables:
     solution: 'OpenBVE.sln'
