New: Add Plugin and Description nodes to Train.xml

--- a/source/CarXMLConvertor/CarXMLConvertor.csproj
+++ b/source/CarXMLConvertor/CarXMLConvertor.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Convert.Ats.cs" />
     <Compile Include="Convert.ExtensionsCfg.cs" />
     <Compile Include="Convert.Panel2.cs" />
     <Compile Include="Convert.PanelAnimated.cs" />
