--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Handles\Handles.Power.cs" />
     <Compile Include="Handles\Handles.Reverser.cs" />
     <Compile Include="Handles\Handles.Reverser.Positions.cs" />
+    <Compile Include="Handles\Handles.SpringTypes.cs" />
     <Compile Include="Motor\AbstractMotorSound.cs" />
     <Compile Include="Motor\BVE4\MotorSound.cs" />
     <Compile Include="Motor\BVE4\MotorSoundTable.cs" />
