--- a/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
+++ b/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
@@ -57,9 +57,11 @@
     <Compile Include="Train\BVE\ExtensionsCfgParser.cs" />
     <Compile Include="Train\BVE\TrainDatParser.cs" />
     <Compile Include="Train\BVE\TrainDatparser.Formats.cs" />
+    <Compile Include="Train\XML\TrainXmlParser.AccelerationNode.cs" />
     <Compile Include="Train\XML\TrainXmlParser.BrakeNode.cs" />
     <Compile Include="Train\XML\TrainXmlParser.CarNode.cs" />
     <Compile Include="Train\XML\TrainXmlParser.cs" />
+    <Compile Include="Train\XML\TrainXmlParser.HandleNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\LibRender2\LibRender2.csproj">
