--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Structures\Signals\SignalData.BVE4.cs" />
     <Compile Include="Structures\Signals\Transponder.cs" />
     <Compile Include="Structures\StructureData.cs" />
+    <Compile Include="Structures\Tracks\Switch.cs" />
     <Compile Include="Structures\Trains\Brightness.cs" />
     <Compile Include="Structures\Trains\DestinationEvent.cs" />
     <Compile Include="Structures\Trains\HornBlow.cs" />
