Change: Refactor CarSections / ElementsGroups

--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -37,6 +37,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="OpenTK, Version=3.3.3.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\..\packages\OpenTK-OpenBVE.1.0.2\lib\net20\OpenTK.dll</HintPath>
     </Reference>
@@ -89,7 +90,8 @@
     <Compile Include="Text\OpenGlString.cs" />
     <Compile Include="Trains\CarSection.cs" />
     <Compile Include="Trains\CarSection.Type.cs" />
-    <Compile Include="Trains\ElementsGroup.cs" />
+    <Compile Include="Trains\CarSection\AnimatedElementsGroup.cs" />
+    <Compile Include="Trains\CarSection\ElementsGroup.cs" />
     <Compile Include="Trains\Panel\TouchElement.cs" />
     <Compile Include="Viewport\ViewportChangeModes.cs" />
     <Compile Include="Viewport\ViewportModes.cs" />
