Change: Make log viewing work better on non Windows
If no default app is set to launch text files, just closes, so use our own window instead

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -227,6 +227,12 @@
     <Compile Include="System\Logging\Score.cs" />
     <Compile Include="System\Options.cs" />
     <Compile Include="System\Program\CommandLine.cs" />
+    <Compile Include="UserInterface\formViewLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface\formViewLog.Designer.cs">
+      <DependentUpon>formViewLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface\formImageExport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -269,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface\formRaildriverCalibration.resx">
       <DependentUpon>formRaildriverCalibration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface\formViewLog.resx">
+      <DependentUpon>formViewLog.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <Compile Include="Audio\Sounds.cs" />
@@ -427,7 +436,7 @@
   </PropertyGroup>
   <Target Name="AfterBuild">
     <!-- Set LBA flag -->
-    <Exec Condition="'$(OS)' != 'Unix'" Command='"$(TargetDir)DevTools\LBAHeader.exe" "$(TargetDir)OpenBve.exe"' />
+    <Exec Condition="'$(OS)' != 'Unix'" Command="&quot;$(TargetDir)DevTools\LBAHeader.exe&quot; &quot;$(TargetDir)OpenBve.exe&quot;" />
     <Exec Condition="'$(OS)' == 'Unix'" Command="mono $(TargetDir)DevTools/LBAHeader.exe $(TargetDir)OpenBve.exe" />
     <!-- Copy in dependancies -->
     <!-- NOTE: Whilst AtsPluginProxy.dll is Windows specific, we still want to copy it in the auto-generated nightly builds -->
