Move various bits around, implement cylinder cocks
[skip ci]

--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -74,21 +74,23 @@
     <Compile Include="Car\Windscreen\Wiper.cs" />
     <Compile Include="Car\Windscreen\WiperPosition.cs" />
     <Compile Include="Car\Windscreen\WiperSpeed.cs" />
-    <Compile Include="Handles\AbstractHandle.cs" />
+    <Compile Include="Handles\AbstractTypes\AbstractHandle.cs" />
+    <Compile Include="Handles\AbstractTypes\AbstractReverser.cs" />
     <Compile Include="Handles\CabHandles.cs" />
     <Compile Include="Handles\HandleChange.cs" />
-    <Compile Include="Handles\Handles.AirBrake.cs" />
-    <Compile Include="Handles\Handles.AirBrake.States.cs" />
-    <Compile Include="Handles\Handles.Brake.cs" />
-    <Compile Include="Handles\Handles.Eb.Behaviour.cs" />
-    <Compile Include="Handles\Handles.EmergencyBrake.cs" />
+    <Compile Include="Handles\Brake\AirBrake.cs" />
+    <Compile Include="Handles\Brake\AirBrake.States.cs" />
+    <Compile Include="Handles\Brake\Brake.cs" />
+    <Compile Include="Handles\Brake\Eb.Behaviour.cs" />
+    <Compile Include="Handles\Brake\EmergencyBrake.cs" />
     <Compile Include="Handles\Handles.HandleType.cs" />
-    <Compile Include="Handles\Handles.HoldBrake.cs" />
-    <Compile Include="Handles\Handles.LocoBrake.cs" />
-    <Compile Include="Handles\Handles.LocoBrake.Types.cs" />
-    <Compile Include="Handles\Handles.Power.cs" />
-    <Compile Include="Handles\Handles.Reverser.cs" />
-    <Compile Include="Handles\Handles.Reverser.Positions.cs" />
+    <Compile Include="Handles\Brake\HoldBrake.cs" />
+    <Compile Include="Handles\Brake\LocoBrake.cs" />
+    <Compile Include="Handles\Brake\LocoBrake.Types.cs" />
+    <Compile Include="Handles\Power\Power.cs" />
+    <Compile Include="Handles\Reverser\Cutoff.cs" />
+    <Compile Include="Handles\Reverser\Reverser.cs" />
+    <Compile Include="Handles\Reverser\Reverser.Positions.cs" />
     <Compile Include="Handles\Handles.SpringTypes.cs" />
     <Compile Include="Motor\AbstractMotorSound.cs" />
     <Compile Include="Motor\BVE4\MotorSound.cs" />
@@ -125,8 +127,8 @@
     <Compile Include="TrackFollowingObject\TrackFollowingObject.cs" />
     <Compile Include="TractionModels\Blowers.cs" />
     <Compile Include="TractionModels\Steam\Boiler.cs" />
-    <Compile Include="TractionModels\Steam\Cutoff.cs" />
     <Compile Include="TractionModels\Steam\CylinderChest.cs" />
+    <Compile Include="TractionModels\Steam\CylinderCocks.cs" />
     <Compile Include="TractionModels\Steam\ExhaustSteamInjector.cs" />
     <Compile Include="TractionModels\Steam\Firebox.cs" />
     <Compile Include="TractionModels\Steam\LiveSteamInjector.cs" />
