Remove Specs.IsMotorCar

--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -127,7 +127,7 @@
     <Compile Include="TrackFollowingObject\AI\TravelStopData.cs" />
     <Compile Include="TrackFollowingObject\TrackFollowingObject.cs" />
     <Compile Include="TractionModels\AbstractTractionModel.cs" />
-    <Compile Include="TractionModels\BVE\TrailerCar.cs" />
+    <Compile Include="TractionModels\Generic\TrailerCar.cs" />
     <Compile Include="TractionModels\Steam\Blowers.cs" />
     <Compile Include="TractionModels\Steam\Boiler.cs" />
     <Compile Include="TractionModels\Steam\CylinderChest.cs" />
