Change: Convert B3D / CSV parser to enums, minor improvements

--- a/source/Plugins/Object.CsvB3d/Object.CsvB3d.csproj
+++ b/source/Plugins/Object.CsvB3d/Object.CsvB3d.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Plugin.Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
