Change: Use enums in wavefront parser

--- a/source/Plugins/Object.Wavefront/Object.Wavefront.csproj
+++ b/source/Plugins/Object.Wavefront/Object.Wavefront.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parsers\AssimpObjParser.cs" />
+    <Compile Include="Parsers\Commands.cs" />
     <Compile Include="Parsers\WavefrontObjParser.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
