Change: Improve overlay rendering with enum
https://github.com/leezer3/OpenBVE/pull/165

--- a/assets/In-game/Default/interface.cfg
+++ b/assets/In-game/Default/interface.cfg
@@ -280,7 +280,7 @@ textshadow = 1
 transition = 2
 
 [element]
-subject = dist_next_station2
+subject = distnextstation2
 position = 8, -116
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
@@ -289,7 +289,7 @@ textshadow = 1
 transition = 2
 
 [element]
-subject = dist_next_station
+subject = distnextstation
 position = 8, -132
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
