Implement palleted images

--- a/source/Plugins/Texture.BmpGifJpegPngTiff/Texture.BmpGifJpegPngTiff.csproj
+++ b/source/Plugins/Texture.BmpGifJpegPngTiff/Texture.BmpGifJpegPngTiff.csproj
@@ -74,6 +74,7 @@
     <Compile Include="PNG\ChunkType.cs" />
     <Compile Include="PNG\ColorType.cs" />
     <Compile Include="PNG\InterlaceMethod.cs" />
+    <Compile Include="PNG\Palette.cs" />
     <Compile Include="PNG\PngDecoder.cs" />
     <Compile Include="PNG\ScanlineFilterAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
